--- a/pom.xml
+++ b/pom.xml
@@ -19,11 +19,16 @@
 	<properties>
 		<version.org.fenixedu.bennu>3.4.1</version.org.fenixedu.bennu>
 		<version.org.fenixedu.bennu.spring>1.2.0</version.org.fenixedu.bennu.spring>
-		<version.org.fenixedu.academic>4.1.5</version.org.fenixedu.academic>
+		<version.org.fenixedu.academic>5.0.0-SNAPSHOT</version.org.fenixedu.academic>
 		<version.org.fenixedu.treasury>1.0.0-SNAPSHOT</version.org.fenixedu.treasury>
 	</properties>
 
 	<dependencies>
+		<dependency>
+		  <groupId>com.fatboyindustrial.gson-jodatime-serialisers</groupId>
+		  <artifactId>gson-jodatime-serialisers</artifactId>
+		  <version>1.1.0</version>
+		</dependency>
 		<dependency>
 			<groupId>org.fenixedu</groupId>
 			<artifactId>bennu-core</artifactId>
@@ -56,4 +61,34 @@
 			<url>https://repo.fenixedu.org/fenixedu-maven-repository</url>
 		</repository>
 	</repositories>
+	
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<version>1.8</version>
+				<executions>
+					<execution>
+						<id>initialize</id>
+						<phase>initialize</phase>
+						<configuration>
+							<target>
+								<property name="basedir" refid="maven.project" />
+
+								<echo message="ANTRUN: copy resources and convert to UTF-8 to webapp/WEB-INF/resources" />
+
+								<copy todir="${basedir}/src/main/webapp/WEB-INF/resources" encoding="ISO-8859-15" outputencoding="UTF-8" overwrite="true">
+									<fileset dir="${basedir}/src/main/resources/resources/" />
+								</copy>
+							</target>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>	
 </project>
