--- a/pom.xml
+++ b/pom.xml
@@ -93,7 +93,7 @@
 	<repositories>
 		<repository>
 			<id>ulisboa-repo</id>
-			<url>http://nexjen.ulisboa.pt/nexus/content/groups/public/</url>
+			<url>http://ul-nexjen.ulisboa.pt:8081/nexus/content/groups/public/</url>
 		</repository>
 		<repository>
 			<id>fenixedu-maven-repository</id>
