--- a/pom.xml
+++ b/pom.xml
@@ -24,11 +24,12 @@
 	</properties>
 
 	<dependencies>
-		<dependency>
-		  <groupId>com.fatboyindustrial.gson-jodatime-serialisers</groupId>
-		  <artifactId>gson-jodatime-serialisers</artifactId>
-		  <version>1.1.0</version>
-		</dependency>
+    
+    <dependency>
+            <groupId>com.qubit.solution.fenixedu</groupId>
+            <artifactId>fenixedu-ulisboa-tools</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
 		<dependency>
 			<groupId>org.fenixedu</groupId>
 			<artifactId>bennu-core</artifactId>
@@ -102,16 +103,23 @@
 		
 	</dependencies>
 
-	<repositories>
-		<repository>
-			<id>ulisboa-repo</id>
-			<url>http://ul-nexjen.ulisboa.pt:8081/nexus/content/groups/public/</url>
-		</repository>
-		<repository>
-			<id>fenixedu-maven-repository</id>
-			<url>https://repo.fenixedu.org/fenixedu-maven-repository</url>
-		</repository>
-	</repositories>
+	 <pluginRepositories>
+        <pluginRepository>
+            <id>ulisboa-repo</id>
+            <url>http://nexjen.ulisboa.pt/nexus/content/groups/public/</url>
+        </pluginRepository>
+    </pluginRepositories>
+    
+    <repositories>
+        <repository>
+            <id>ulisboa-repo</id>
+            <url>http://nexjen.ulisboa.pt/nexus/content/groups/public/</url>
+        </repository>
+        <repository>
+            <id>fenixedu-maven-repository</id>
+            <url>https://repo.fenixedu.org/fenixedu-maven-repository</url>
+        </repository>
+    </repositories>
 	
 	<build>
 		<plugins>
