--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 		<relativePath />
 	</parent>
 
+	<groupId>org.fenixedu</groupId>
 	<artifactId>fenixedu-academic-treasury</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
