Tuition Payment Plan fixes

--- a/src/main/resources/resources/AcademicTreasuryResources.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources.properties
@@ -40,3 +40,7 @@ label.finish=Finish
 
 error.TuitionPaymentPlanGroup.code.required= Tuition Payment Plan Group code is required
 error.TuitionPaymentPlanGroup.name.required= Tuition Payment Plan Group name is required
+error.TuitionPaymentPlanGroup.for.standalone.already.exists= Tuition Payment Plan Group for standalone already exists
+error.TuitionPaymentPlanGroup.delete.impossible= Tuition Payment Plan Group cannot be deleted
+label.TuitionPaymentPlan.degreeCurricularPlanDataSource.is.empty=There are no Degree Curricular Plans to select
+label.createinsertinstallments.confirmDelete=Are you sure you want to remove?
