--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,12 @@
 			<version>0.8.11</version>
 		</dependency>
 		
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.11</version>
+        </dependency>
+		
 	</dependencies>
 
 	 <pluginRepositories>
