--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 		<version.org.fenixedu.bennu.spring>1.2.0</version.org.fenixedu.bennu.spring>
 		<version.org.fenixedu.academic>5.2.0-SNAPSHOT</version.org.fenixedu.academic>
 		<version.org.fenixedu.treasury>1.0.0-SNAPSHOT</version.org.fenixedu.treasury>
+		<version.org.fenixedu.qubdocs.reports>1.0.0-SNAPSHOT</version.org.fenixedu.qubdocs.reports>
 	</properties>
 
 	<dependencies>
@@ -50,6 +51,11 @@
 			<groupId>org.fenixedu</groupId>
 			<artifactId>fenixedu-treasury</artifactId>
 			<version>${version.org.fenixedu.treasury}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.fenixedu</groupId>
+			<artifactId>fenixedu-qubdocs-reports</artifactId>
+			<version>${version.org.fenixedu.qubdocs.reports}</version>
 		</dependency>
 		
 		<dependency>
