--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.qubit.solution.fenixedu</groupId>
 		<artifactId>versioned-fenix-framework-project</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>1.0.0</version>
 		<relativePath />
 	</parent>
 
@@ -21,8 +21,8 @@
 		<version.org.fenixedu.bennu>3.4.2-SNAPSHOT</version.org.fenixedu.bennu>
 		<version.org.fenixedu.bennu.spring>1.2.0</version.org.fenixedu.bennu.spring>
 		<version.org.fenixedu.academic>5.2.0-SNAPSHOT</version.org.fenixedu.academic>
-		<version.org.fenixedu.treasury>1.0.0-SNAPSHOT</version.org.fenixedu.treasury>
-		<version.org.fenixedu.qubdocs.reports>1.0.0-SNAPSHOT</version.org.fenixedu.qubdocs.reports>
+		<version.org.fenixedu.treasury>1.0.0</version.org.fenixedu.treasury>
+		<version.org.fenixedu.qubdocs.reports>1.0.0</version.org.fenixedu.qubdocs.reports>
 	</properties>
 
 	<dependencies>
@@ -30,7 +30,7 @@
     <dependency>
             <groupId>com.qubit.solution.fenixedu</groupId>
             <artifactId>fenixedu-ulisboa-tools</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.0</version>
         </dependency>
 		<dependency>
 			<groupId>org.fenixedu</groupId>
