--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.qubit.solution.fenixedu</groupId>
 		<artifactId>versioned-fenix-framework-project</artifactId>
-		<version>1.0.0</version>
+		<version>2.0.0</version>
 		<relativePath />
 	</parent>
 
@@ -18,28 +18,48 @@
 	<name>Academic Treasury</name>
 
 	<properties>
-		<version.org.fenixedu.bennu>3.4.2-SNAPSHOT</version.org.fenixedu.bennu>
-		<version.org.fenixedu.bennu.spring>1.2.0</version.org.fenixedu.bennu.spring>
-		<version.org.fenixedu.academic>5.2.0-SNAPSHOT</version.org.fenixedu.academic>
-		<version.org.fenixedu.treasury>1.0.12</version.org.fenixedu.treasury>
-		<version.org.fenixedu.qubdocs.reports>1.0.1</version.org.fenixedu.qubdocs.reports>
+		<version.org.fenixedu.bennu>6.0.0-FORK</version.org.fenixedu.bennu>
+		<version.org.fenixedu.academic>8.4.0</version.org.fenixedu.academic>
+		<version.org.fenixedu.treasury>2.0.0</version.org.fenixedu.treasury>
+		<version.org.fenixedu.qubdocs.reports>2.0.0</version.org.fenixedu.qubdocs.reports>
 	</properties>
 
 	<dependencies>
     
+        <dependency>
+            <groupId>org.fenixedu</groupId>
+            <artifactId>bennu-core</artifactId>
+            <version>${version.org.fenixedu.bennu}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.fenixedu</groupId>
+            <artifactId>bennu-scheduler</artifactId>
+            <version>${version.org.fenixedu.bennu}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.fenixedu</groupId>
+            <artifactId>bennu-portal</artifactId>
+            <version>${version.org.fenixedu.bennu}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.fenixedu</groupId>
+            <artifactId>bennu-io</artifactId>
+            <version>${version.org.fenixedu.bennu}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.fenixedu</groupId>
+            <artifactId>bennu-spring</artifactId>
+            <version>${version.org.fenixedu.bennu}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.fenixedu</groupId>
+            <artifactId>bennu-cas-client</artifactId>
+            <version>${version.org.fenixedu.bennu}</version>
+        </dependency>
+
 		<dependency>
-			<groupId>org.fenixedu</groupId>
-			<artifactId>bennu-core</artifactId>
-			<version>${version.org.fenixedu.bennu}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.fenixedu</groupId>
-			<artifactId>bennu-spring</artifactId>
-			<version>${version.org.fenixedu.bennu.spring}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.fenixedu</groupId>
-			<artifactId>fenixedu-academic</artifactId>
+			<groupId>com.qubit.solution.fenixedu</groupId>
+			<artifactId>fenixedu-academic-core</artifactId>
 			<version>${version.org.fenixedu.academic}</version>
 		</dependency>
 		<dependency>
