--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,6 @@
 
 	<properties>
 		<version.org.fenixedu.bennu>6.0.3-FORK</version.org.fenixedu.bennu>
-		<version.org.fenixedu.academic>20.0.0</version.org.fenixedu.academic>
 		<version.org.fenixedu.treasury>2.1.3</version.org.fenixedu.treasury>
 		<version.org.fenixedu.qubdocs.reports>2.0.0</version.org.fenixedu.qubdocs.reports>
 	</properties>
@@ -59,7 +58,7 @@
 		<dependency>
 			<groupId>com.qubit.solution.fenixedu</groupId>
 			<artifactId>fenixedu-academic-core</artifactId>
-			<version>${version.org.fenixedu.academic}</version>
+			<version>21.0.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.fenixedu</groupId>
