--- a/pom.xml
+++ b/pom.xml
@@ -56,12 +56,12 @@
 		<dependency>
 			<groupId>org.fenixedu</groupId>
 			<artifactId>fenixedu-academic-treasury-base</artifactId>
-			<version>5.3.1</version>
+			<version>5.3.1.20201111_1324</version>
 		</dependency>
 		<dependency>
 			<groupId>org.fenixedu</groupId>
 			<artifactId>fenixedu-treasury-ui</artifactId>
-			<version>5.1.3</version>
+			<version>5.1.4.20201111_1319</version>
 		</dependency>
 		<dependency>
 			<groupId>org.fenixedu</groupId>
