--- a/pom.xml
+++ b/pom.xml
@@ -53,15 +53,20 @@
 			<artifactId>bennu-cas-client</artifactId>
 			<version>${version.org.fenixedu.bennu}</version>
 		</dependency>
+                <dependency>
+                        <groupId>org.fenixedu</groupId>
+                        <artifactId>fenixedu-treasury-base</artifactId>
+                        <version>6.1.2</version>
+                </dependency>
 		<dependency>
 			<groupId>org.fenixedu</groupId>
 			<artifactId>fenixedu-academic-treasury-base</artifactId>
-			<version>6.0.0</version>
+			<version>6.1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.fenixedu</groupId>
 			<artifactId>fenixedu-treasury-ui</artifactId>
-			<version>6.0.0</version>
+			<version>6.1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.fenixedu</groupId>
