--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.fenixedu</groupId>
+			<artifactId>fenixedu-treasury-base</artifactId>
+			<version>9.6.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.fenixedu</groupId>
 			<artifactId>fenixedu-academic-treasury-base</artifactId>
 			<version>8.4.7</version>
 		</dependency>
