--- a/pom.xml
+++ b/pom.xml
@@ -57,10 +57,12 @@
 		<dependency>
 			<groupId>org.fenixedu</groupId>
 			<artifactId>fenixedu-treasury-base</artifactId>
+			<version>12.20.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.fenixedu</groupId>
 			<artifactId>fenixedu-academic-treasury-base</artifactId>
+			<version>11.10.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.fenixedu</groupId>
