--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,7 @@
 		<dependency>
 			<groupId>org.fenixedu</groupId>
 			<artifactId>fenixedu-treasury-ui</artifactId>
+			<version>9.2.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.webjars</groupId>
