--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,7 @@
 		<dependency>
 			<groupId>org.fenixedu</groupId>
 			<artifactId>fenixedu-academic-treasury-base</artifactId>
+			<version>12.9.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.fenixedu</groupId>
